--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,8 @@
-<p>board works!</p>
+<div class="board">
+    <app-cell
+        *ngFor="let row of board; let rowIndex = index"
+        [row]="rowIndex"
+        [cells]="row"
+        
+    ></app-cell>
+</div>
