--- a/src/app/game-status/game-status.component.html
+++ b/src/app/game-status/game-status.component.html
@@ -1,1 +1,4 @@
-<p>game-status works!</p>
+<div class="status">
+    <div *ngIf="!winner">Current Player: {{ currentPlayer }}</div>
+    <div *ngIf="winner">Winner: {{ winner }}</div>
+  </div>
